--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "lodash": "^4.17.4",
     "mocha": "^4.0.1",
     "moment": "^2.20.1",
+    "moment-hijri": "^2.0.1",
     "node-sass": "^4.6.0",
     "npm-run-all": "^4.1.2",
     "prettier": "^1.9.2",
@@ -84,6 +85,7 @@
   },
   "peerDependencies": {
     "moment": "^2.20.0",
+    "moment-hijri": "^2.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
